--- a/VendorOrderTracker/Views/Home/Index.cshtml
+++ b/VendorOrderTracker/Views/Home/Index.cshtml
@@ -4,14 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Pierre's Bakery Vendor/Order Tracker</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
   <h1>Pierre's Bakery Vendors</h1>
   <h2>This is the place to add any new vendors or to see existing vendors and their orders.</h2>
-  <a href='/items/new'>Add a new vendor</a>
+  <a href='/vendors/new'>Add a new vendor</a>
   <br>
-  <a href='/items'>See list of all vendors</a>
+  <a href='/vendors'>See list of all vendors</a>
 </body>
 
 </html>
