rework vendor model and controller, many error messages to work through.

--- a/VendorOrderTracker/Views/Home/Index.cshtml
+++ b/VendorOrderTracker/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
   <h2>This is the place to add any new vendors or to see existing vendors and their orders.</h2>
   <a href='/vendors/new'>Add a new vendor</a>
   <br>
-  <a href='/vendors'>See list of all vendors</a>
+  <a href='/vendors/show'>See list of all vendors</a>
 </body>
 
 </html>
