--- a/VendorOrderTracker/Views/Home/Index.cshtml
+++ b/VendorOrderTracker/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Pierre's Bakery Vendors</h1>
-  <h2>This is the place to add any new vendors or to see existing vendors and their orders.</h2>
+  <h2>This is the place to add any new vendors or to see existing vendors.</h2>
   <a href='/vendors/new'>Add a new vendor</a>
   <br>
   <a href='/vendors/show'>See list of all vendors</a>
