--- a/VendorOrderTracker/Views/Home/Index.cshtml
+++ b/VendorOrderTracker/Views/Home/Index.cshtml
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Pierre's Bakery Vendor/Order Tracker</title>
+  <title>Pierre's Bakery</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
-  <h1>Pierre's Bakery Vendors</h1>
-  <h2>This is the place to add any new vendors or to see existing vendors.</h2>
-  <a href='/vendors/new'>Add a new vendor</a>
+  <h1>Welcome to Pierre's Bakery Vendor list</h1>
+  <h3><a href='/vendors'>View vendors</a></h3>
   <br>
-  <a href='/vendors/show'>See list of all vendors</a>
+  <h3><a href='/categories/new'>Add a new vendor</a></h3>
 </body>
 
 </html>
