--- a/VendorOrderTracker/Views/Home/Index.cshtml
+++ b/VendorOrderTracker/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
   <h1>Welcome to Pierre's Bakery Vendor list</h1>
   <h3><a href='/vendors'>View vendors</a></h3>
   <br>
-  <h3><a href='/categories/new'>Add a new vendor</a></h3>
+  <h3><a href='/vendors/new'>Add a new vendor</a></h3>
 </body>
 
 </html>
